--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>Dominique G. Maucieri</h2>
-						<p style="color:white">PhD Student UVic, MSc UVic, BSc UCalgary</p>
+						<h2>How inappropriate to call this planet Earth<br />
+							 when it is quite clearly Ocean.</h2>
+						<p style="color:white">Arthur C. Clarke</p>
 					</div>
 				</section>
 
@@ -56,6 +57,10 @@
 
 								<!-- Highlight -->
 									<section class="box highlight">
+										<header>
+											<h2>Dominique G. Maucieri</h2>
+											<p>PhD Student UVic, MSc UVic, BSc UCalgary</p>
+										</header>
 										<ul class="contact">
 											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -65,27 +70,12 @@
 											<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
 											<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 										</ul>
-										<header>
-											<h2>A random assortment of icons in circles</h2>
-											<p>And some text that attempts to explain their significance</p>
-										</header>
-										<p>
-											Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi. Etiam eu<br />
-											ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus amet pulvinar. Nam nec turpis consequat.
-										</p>
 									</section>
 
 							</div>
 							<div class="col-12">
 
-								<!-- Features -->
-									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
-										<div>
-											<div class="row">
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
+						<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 															<h3><a href="#">A Subheading</a></h3>
@@ -97,50 +87,6 @@
 
 												</div>
 												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
-													</ul>
-												</div>
 											</div>
 										</div>
 									</section>
@@ -148,100 +94,6 @@
 							</div>
 							<div class="col-12">
 
-								<!-- Blog -->
-									<section class="box blog">
-										<h2 class="major"><span>Another Major Heading</span></h2>
-										<div>
-											<div class="row">
-												<div class="col-9 col-12-medium">
-													<div class="content">
-
-														<!-- Featured Post -->
-															<article class="box post">
-																<header>
-																	<h3><a href="#">Here's a really big heading</a></h3>
-																	<p>With a smaller subtitle that attempts to elaborate</p>
-																	<ul class="meta">
-																		<li class="icon fa-clock">15 minutes ago</li>
-																		<li class="icon fa-comments"><a href="#">8</a></li>
-																	</ul>
-																</header>
-																<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-																<p>
-																	Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in lectus. Praesent
-																	semper mod quis eget mi. Etiam sed ante risus aliquam erat et volutpat. Praesent a
-																	dapibus velit. Curabitur sed nisi nunc, accumsan vestibulum lectus. Lorem ipsum
-																	dolor sit non aliquet sed, tempor et dolor. Praesent a dapibus velit. Curabitur
-																	accumsan.
-																</p>
-																<a href="#" class="button">Continue Reading</a>
-															</article>
-
-													</div>
-												</div>
-												<div class="col-3 col-12-medium">
-													<div class="sidebar">
-
-														<!-- Archives -->
-															<ul class="divided">
-																<li>
-																	<article class="box post-summary">
-																		<h3><a href="#">A Subheading</a></h3>
-																		<ul class="meta">
-																			<li class="icon fa-clock">6 hours ago</li>
-																			<li class="icon fa-comments"><a href="#">34</a></li>
-																		</ul>
-																	</article>
-																</li>
-																<li>
-																	<article class="box post-summary">
-																		<h3><a href="#">Another Subheading</a></h3>
-																		<ul class="meta">
-																			<li class="icon fa-clock">9 hours ago</li>
-																			<li class="icon fa-comments"><a href="#">27</a></li>
-																		</ul>
-																	</article>
-																</li>
-																<li>
-																	<article class="box post-summary">
-																		<h3><a href="#">And Another</a></h3>
-																		<ul class="meta">
-																			<li class="icon fa-clock">Yesterday</li>
-																			<li class="icon fa-comments"><a href="#">184</a></li>
-																		</ul>
-																	</article>
-																</li>
-																<li>
-																	<article class="box post-summary">
-																		<h3><a href="#">And Another</a></h3>
-																		<ul class="meta">
-																			<li class="icon fa-clock">2 days ago</li>
-																			<li class="icon fa-comments"><a href="#">286</a></li>
-																		</ul>
-																	</article>
-																</li>
-																<li>
-																	<article class="box post-summary">
-																		<h3><a href="#">And One More</a></h3>
-																		<ul class="meta">
-																			<li class="icon fa-clock">3 days ago</li>
-																			<li class="icon fa-comments"><a href="#">8,086</a></li>
-																		</ul>
-																	</article>
-																</li>
-															</ul>
-															<a href="#" class="button alt">Archives</a>
-
-													</div>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
-						</div>
-					</div>
-				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -251,22 +103,14 @@
 
 								<!-- About -->
 									<section>
-										<h2 class="major"><span>What's this about?</span></h2>
-										<p>
-											This is <strong>TXT</strong>, yet another free responsive site template designed by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>. It's released under the
-											<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for
-											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
-											That's basically it :)
-										</p>
-									</section>
-
-							</div>
-							<div class="col-12">
-
-								<!-- Contact -->
-									<section>
 										<h2 class="major"><span>Get in touch</span></h2>
+										<p>
+											If you have any questions about my research or any of the labs I have been a part of, or if you just have graphic
+											design or coding questions, I would love to chat. Also, if you are interesting in me speaking to your class,
+											or providing a workshop get in touch, if I have the time I would love to. You can email me at
+											dominiquemaucieri "at" gmail.com or dominiquemaucieri "at" uvic.ca.
+										</p>
+
 										<ul class="contact">
 											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
