--- a/publications.html
+++ b/publications.html
@@ -43,17 +43,70 @@
 			<!-- Banner -->
 					<section id="bannerbrady"></section>
 
-			<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
-							<div class="col-3 col-12-medium">
-								<div class="sidebar">
+					<!-- Main -->
+						<section id="main">
+							<div class="container">
+								<div class="row">
+									<div class="col-12">
+										<div class="content">
 
-									<!-- Sidebar -->
+							<!-- Content -->
 
-									<!-- Highlight -->
-										<section class="box highlight">
+								<article class="box page-content">
+
+											<header>
+												<h2>Publications</h2>
+											</header>
+
+											<section>
+												<h3>In the pipline</h3>
+												<p class =”apa-reference”>
+													<strong>Maucieri, D.G.</strong>, S. Starko and J.K. Baum. Disentangling the impacts of multiple stressors on coral reef
+													diversity: tipping points and interactive effects. (<em>In Prep</em>).
+												</p>
+												<p class =”apa-reference”>
+													Baum, J.K., D.C. Claar, K.L. Tietjen, J.M.T. Magel, <strong>D.G. Maucieri</strong>, K.M. Cobb, J.M. McDevitt-Irwin.
+													Transformation of coral communities subjected to an unprecedented heatwave is modulated by local disturbance. (<em>In Review</em>)
+													Preprint: <a href="https://www.biorxiv.org/content/10.1101/2022.05.10.491220v1">biorxiv.org/content/10.1101/2022.05.10.491220v1</a>
+												</p>
+											</section>
+
+											<section>
+												<h3>2021</h3>
+												<p class =”apa-reference”>
+													<strong>Maucieri, D.G.</strong>, and J.K. Baum. 2021. Impacts of heat stress on soft corals, an overlooked and highly
+													vulnerable component of coral reef ecosystems, at a central equatorial Pacific atoll. Biological Conservation
+													262: 1-10. DOI: <a href="http://doi.org/10.1016/j.biocon.2021.109328">10.1016/j.biocon.2021.109328</a>
+												</p>
+												<p>
+													<strong>Maucieri, D.G.</strong>, A.J. Ashbaugh, and J.M. Theodor. Sexual dimorphism in bat wing morphology – variation
+													among foraging styles. Canadian Journal of Zoology 99(11): 953-960. DOI: <a href="http://doi.org/10.1139/cjz-2021-0035">10.1139/cjz-2021-0035</a>
+												</p>
+												<p>
+													<strong>Maucieri, D.G.</strong>, and R.M.R. Barclay. 2021. Consumption of spiders by the little brown bat (<em>Myotis lucifugus</em>)
+													and the long-eared bat (Myotis evotis) in the Rocky Mountains of Alberta. Canadian Journal of Zoology 99(3): 221-226.
+													DOI: <a href="http://doi.org/10.1139/cjz-2020-0160">10.1139/cjz-2020-0160</a>
+												</p>
+											</section>
+
+										</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="container">
+							<div class="row gtr-200">
+								<div class="col-12">
+
+									<!-- About -->
+										<section>
+											<h2 class="major"><span>Get in touch</span></h2>
+											<p>
+												If you have any questions about my research or any of the labs I have been a part of, or if you just have graphic
+												design or coding questions, I would love to chat. Also, if you are interesting in me speaking to your class,
+												or providing a workshop get in touch, if I have the time I would love to. You can email me at
+												dominiquemaucieri "at" gmail.com or dominiquemaucieri "at" uvic.ca.
+											</p>
+
 											<ul class="contact">
 												<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -65,275 +118,29 @@
 											</ul>
 										</section>
 
-										<!-- Recent Posts -->
-											<section>
-												<h2 class="major"><span>Recent Posts</span></h2>
-												<ul class="divided">
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">A Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">6 hours ago</li>
-																<li class="icon fa-comments"><a href="#">34</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">Another Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">9 hours ago</li>
-																<li class="icon fa-comments"><a href="#">27</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">And Another</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">Yesterday</li>
-																<li class="icon fa-comments"><a href="#">184</a></li>
-															</ul>
-														</article>
-													</li>
-												</ul>
-												<a href="#" class="button alt">Archives</a>
-											</section>
-
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Ipsum Dolore</span></h2>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<p>
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
-
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Magna Feugiat</span></h2>
-												<p>
-													Rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
-
 								</div>
 							</div>
-							<div class="col-9 col-12-medium imp-medium">
-								<div class="content">
 
-									<!-- Content -->
-
-										<article class="box page-content">
-
-											<header>
-												<h2>Publications</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
-												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
-												</ul>
-											</header>
-
-											<section>
-												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
-												<p>
-													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.
-												</p>
-											</section>
-
-											<section>
-												<h3>More intriguing information</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.
-												</p>
-												<p>
-													Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
-
-											<section>
-												<h3>So in conclusion ...</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae.
-												</p>
-												<p>
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
-
-										</article>
-
+							<!-- Copyright -->
+								<div id="copyright">
+									<ul class="menu">
+										<li>&copy; Dominique G Maucieri. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									</ul>
 								</div>
-							</div>
-							<div class="col-12">
 
-								<!-- Features -->
-									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
-										<div>
-											<div class="row">
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
 						</div>
-					</div>
-				</section>
+					</footer>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="container">
-						<div class="row gtr-200">
-							<div class="col-12">
+			</div>
 
-								<!-- About -->
-									<section>
-										<h2 class="major"><span>What's this about?</span></h2>
-										<p>
-											This is <strong>TXT</strong>, yet another free responsive site template designed by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>. It's released under the
-											<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for
-											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
-											That's basically it :)
-										</p>
-									</section>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/jquery.scrolly.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-							</div>
-							<div class="col-12">
-
-								<!-- Contact -->
-									<section>
-										<h2 class="major"><span>Get in touch</span></h2>
-										<ul class="contact">
-											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-											<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
-											<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-											<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-										</ul>
-									</section>
-
-							</div>
-						</div>
-
-						<!-- Copyright -->
-							<div id="copyright">
-								<ul class="menu">
-									<li>&copy; Dominique G Maucieri. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								</ul>
-							</div>
-
-					</div>
-				</footer>
-
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+		</body>
+	</html>
