--- a/research.html
+++ b/research.html
@@ -276,64 +276,56 @@
 					</div>
 				</section>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="container">
-						<div class="row gtr-200">
-							<div class="col-12">
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="container">
+							<div class="row gtr-200">
+								<div class="col-12">
 
-								<!-- About -->
-									<section>
-										<h2 class="major"><span>What's this about?</span></h2>
-										<p>
-											This is <strong>TXT</strong>, yet another free responsive site template designed by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>. It's released under the
-											<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for
-											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
-											That's basically it :)
-										</p>
-									</section>
+									<!-- About -->
+										<section>
+											<h2 class="major"><span>Get in touch</span></h2>
+											<p>
+												If you have any questions about my research or any of the labs I have been a part of, or if you just have graphic
+												design or coding questions, I would love to chat. Also, if you are interesting in me speaking to your class,
+												or providing a workshop get in touch, if I have the time I would love to. You can email me at
+												dominiquemaucieri "at" gmail.com or dominiquemaucieri "at" uvic.ca.
+											</p>
 
+											<ul class="contact">
+												<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
+												<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
+												<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+											</ul>
+										</section>
+
+								</div>
 							</div>
-							<div class="col-12">
 
-								<!-- Contact -->
-									<section>
-										<h2 class="major"><span>Get in touch</span></h2>
-										<ul class="contact">
-											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="https://www.instagram.com/dominiquemaucieri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="https://github.com/DominiqueMaucieri" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-											<li><a href="https://www.linkedin.com/in/dominique-maucieri/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											<li><a href="https://orcid.org/my-orcid?orcid=0000-0003-1849-2472" class="icon brands fa-orcid"><span class="label">OrcID</span></a></li>
-											<li><a href="https://www.researchgate.net/profile/Dominique_Maucieri" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-											<li><a href="https://scholar.google.com/citations?user=g6CzJWMAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-										</ul>
-									</section>
+							<!-- Copyright -->
+								<div id="copyright">
+									<ul class="menu">
+										<li>&copy; Dominique G Maucieri. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									</ul>
+								</div>
 
-							</div>
 						</div>
+					</footer>
 
-						<!-- Copyright -->
-							<div id="copyright">
-								<ul class="menu">
-									<li>&copy; Dominique G Maucieri. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								</ul>
-							</div>
+			</div>
 
-					</div>
-				</footer>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/jquery.scrolly.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+		</body>
+	</html>
